--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <h1 class="heading">Solicite su credito ahora</h1>
                     <div class="product">
                         <p></p>
-                        <a href="solicitar.html"><button>Solicitar</button></a>
+                        <a href="solicitud prueva.html"><button>Solicitar</button></a>
                     </div>
 
                  
