--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#about" >Nosotros</a></li>
                 <li><a href="#course" >Tipos de prestamos</a></li>
                 <li><a href="#review" >Redes sociales</a></li>
-                <li><a href="solicitar.html" >Solicitar</a></li>
+                <li><a href="solicitud prueva.html" >Solicitar</a></li>
             </ul>
             
         </nav>
