--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -16,31 +16,82 @@
   </head>
 
   <body>
-    <form name="contact" method="POST" data-netlify="true">
-      <p>
-        <label>Nombre: <input type="text" name="name" /></label>
-      </p>
-      <p>
-        <label>Apellido: <input type="text" name="apellido" /></label>
-      </p>
-      <p>
-        <label>Correo: <input type="email" name="email" /></label>
-      </p>
-      <p>
-        <label
-          >Sexo:
-          <select name="sexo[]" multiple>
-            <option value="masculino">masculino</option>
-            <option value="femenino">femenino</option>
-          </select></label
-        >
-      </p>
-      <p>
-        <label>Message: <textarea name="message"></textarea></label>
-      </p>
-      <p>
-        <button type="submit">Send</button>
-      </p>
-    </form>
+    <header>
+      <div class="logo">
+        <img src="logob&H.ico" alt="logo de la compañia" />
+      </div>
+      <nav class="navbar">
+        <ul>
+          <li><a href="index.html" class="active">Inicio</a></li>
+          <li><a href="index.html">Nosotros</a></li>
+          <li><a href="index.html">Tipos de prestamos</a></li>
+          <li><a href="index.html">Redes sociales</a></li>
+          <li><a href="index.html">Solicitar</a></li>
+        </ul>
+      </nav>
+      <div class="fas fa-bars"></div>
+    </header>
+    <section class="contact" id="contact">
+      <h1 class="solicitud">
+        <br />
+        Datos del solicitante
+      </h1>
+
+      <div class="row">
+        <div class="form-container">
+          <form name="contact" method="POST" data-netlify="true">
+            <p>
+              <label class="texto">
+                Nombre: <input type="text" name="nombre"
+              /></label>
+            </p>
+            <p>
+              <label class="texto"
+                >Apellido: <input type="text" name="apellido"
+              /></label>
+            </p>
+            <p>
+              <label class="texto"
+                >Correo: <input type="email" name="email"
+              /></label>
+            </p>
+            <p>
+              <label class="texto"
+                >Fecha de nacimiento: <input type="date" name="fecha"
+              /></label>
+            </p>
+            <p>
+              <label class="texto"
+                >Numero de cedula: <input type="number" name="cedula"
+              /></label>
+            </p>
+            <p>
+              <label class="texto"
+                >Sexo:
+                <select class="select" name="sexo[]" multiple>
+                  <option value="masculino">Masculino</option>
+                  <option value="femenino">Femenino</option>
+                </select></label
+              >
+            </p>
+            <p>
+              <label class="texto"
+                >Estado Civil:
+                <select class="select" name="Estado[]" multiple>
+                  <option value="Casado">Casado</option>
+                  <option value="Soltero">Soltero</option>
+                </select></label
+              >
+            </p>
+
+            <p>
+              <button type="submit">Enviar</button>
+            </p>
+
+            <input type="submit" value="Enviar" />
+          </form>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
