--- a/tipos-prestamo.html
+++ b/tipos-prestamo.html
@@ -157,6 +157,7 @@
                               margin: 5em auto;
                              width: 550px ;
                              height: 500px;
+                             background-size: cover;
                            }
                            #map iframe {
                         
