--- a/descubremas.html
+++ b/descubremas.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html" class="active">Inicio</a></li>
                     <li><a href="#about" >Nosotros</a></li>
-                    <li><a href="#course" >Tipos de prestamos</a></li>
+                    <li><a href="tipos-prestamo.html" >Tipos de prestamos</a></li>
                     <li><a href="#review" >Redes sociales</a></li>
                     <li><a href="solicitar.html" >Solicitar</a></li>
                 </ul>
