--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -128,8 +128,8 @@
             </p>
             <p>
               <label class="texto"
-                >Numero whatsapp:
-                <input type="text" name="cedula" placeholder="whatsapp"
+                >Numero WhatsApp :
+                <input type="text" name="cedula" placeholder="WhatsApp"
               /></label>
             <p>  <h1 class="solicitud">Datos laborales</h1>  </p>
               <label class="texto"
@@ -167,15 +167,7 @@
       placeholder="Sueldo"
   /></label>
 </p>
-<p>
-  <label class="texto"
-  >Sueldo:
-  <input
-    type="text"
-    name="trabajo"
-    placeholder="Sueldo"
-/></label>
-</p>
+
 <p>  <h1 class="solicitud">Datos Del/la Conyugue</h1>  </p>
 <p>
   <label class="texto"
@@ -224,7 +216,7 @@
 <div class="conteiner-1"> 
 <div class="form-group"> 
 <input type="radio" name="size" id="small" required>
-<label class="texto-solicitud" for="small" > Acepta terminos </label>
+<label class="texto-solicitud" for="small" >Acepta los términos y condiciones </label>
 </div>
 </div>
 
