--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                    </div>
 
 
-                    <h1 class="heading">Solicite su crédito ahora</h1>
+                    <h1 class="heading">Solicita tu crédito ahora</h1>
                     <div class="product">
                         <p></p>
                         <a href="solicitud prueva.html"><button>Solicitar</button></a>
