--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -228,7 +228,7 @@
     >Monto a solicitar:
     <input
       type="text"
-      name="conyugue"
+      name="monto"
       placeholder="Escriba un monto"
   /></label>
   </p>
@@ -237,7 +237,7 @@
     >Tiempo:
     <input
       type="text"
-      name="conyugue"
+      name="tiempo"
       placeholder="Escriba en que tiempo"
   /></label>
   </p>
