--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -42,35 +42,35 @@
           <form name="contact" method="POST" data-netlify="true">
             <p>
               <label class="texto">
-                Nombre: <input type="text" name="nombre" placeholder="Nombre"
+                Nombre: <input type="text" name="Nombre" placeholder="Nombre"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Apellido:
-                <input type="text" name="apellido" placeholder="Apellido"
+                <input type="text" name="Apellido" placeholder="Apellido"
               /></label>
             </p>
             <p>
               <label class="texto"
-                >Apodo: <input type="text" name="apodo" placeholder="Apodo"
+                >Apodo: <input type="text" name="Apodo" placeholder="Apodo"
               /></label>
             </p>
             <p>
               <label class="texto"
-                >Correo: <input type="email" name="email" placeholder="Correo"
+                >Correo: <input type="Email" name="email" placeholder="Correo"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Fecha de nacimiento:
-                <input type="date" name="fecha" placeholder="Fecha"
+                <input type="date" name="Fecha" placeholder="Fecha"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Cedula:
-                <input type="cedula" name="cedula" placeholder="Cedula"
+                <input type="Cedula" name="cedula" placeholder="Cedula"
               /></label>
             </p>
             <p>
@@ -78,8 +78,8 @@
                 >Tipo de sexo:
                 <select class="select" name="sexo" > 
                   <option>Elegir </option>
-                  <option value="femenino">Femenino</option>
-                  <option value="masculino">Masculino</option>
+                  <option value="Femenino">Femenino</option>
+                  <option value="Masculino">Masculino</option>
                 </select></label
               >
             </p>
@@ -108,40 +108,40 @@
             </p>
             <p>
               <label class="texto"
-                >Ciudad: <input type="text" name="ciudad" placeholder="Ciudad"
+                >Ciudad: <input type="text" name="Ciudad" placeholder="Ciudad"
               /></label>
             </p>
             <p>
               <label class="texto"
-                >Sector: <input type="text" name="sector" placeholder="Sector"
+                >Sector: <input type="text" name="Sector" placeholder="Sector"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Nombre o Numero de calle y casa:
                 <input
-                  type="calle"
-                  name="calle"
+                  type="text"
+                  name="Calle"
                   placeholder="Nombre o Numero de calle y casa"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Numero de cel:
-                <input type="text" name="numerotel" placeholder="Numero de cel"
+                <input type="text" name="Numero tel" placeholder="Numero de cel"
               /></label>
             </p>
             <p>
               <label class="texto"
                 >Numero WhatsApp :
-                <input type="text" name="numerocel" placeholder="WhatsApp"
+                <input type="text" name="Numero cel" placeholder="WhatsApp"
               /></label>
             <p>  <h1 class="solicitud">Datos laborales</h1>  </p>
               <label class="texto"
                 >Lugar de trabajo:
                 <input
                   type="text"
-                  name="lugar"
+                  name="Lugar de trabajo"
                   placeholder="Lugar de trabajo"
               /></label>
             </p>
@@ -150,7 +150,7 @@
             >Ocupacion:
             <input
               type="text"
-              name="ocupacion"
+              name="Ocupacion"
               placeholder="Ocupacion"
              /></label>
           </p>
@@ -159,7 +159,7 @@
              >Tiempo laborando:
              <input
                type="datetime"
-                name="tiempo"
+                name="Tiempo laborando"
                placeholder="Tiempo laborando"
             /></label>
          </p>
@@ -168,7 +168,7 @@
     >Sueldo:
     <input
       type="text"
-      name="sueldo"
+      name="Sueldo"
       placeholder="Sueldo"
   /></label>
 </p> 
@@ -179,7 +179,7 @@
   >Nombre conyugue:
   <input
     type="text"
-    name="nombreconyugue"
+    name="Nombre conyugue"
     placeholder="Nombre"
 /></label>
 </p>
@@ -188,7 +188,7 @@
   >Apellido conyugue:
   <input
     type="text"
-    name="apellidoconyugue"
+    name="Apellido conyugue"
     placeholder="Apellido"
 /></label>
 </p>
@@ -197,7 +197,7 @@
   >Numero WhatsApp:
   <input
     type="text"
-    name="numeroconyugue"
+    name="Numero conyugue"
     placeholder="Apellido"
 /></label>
 </p>
@@ -206,7 +206,7 @@
   >Lugar de trabajo conyugue:
   <input
     type="text"
-    name="lugarconyugue"
+    name="Lugar conyugue"
     placeholder="lugar de trabajo"
 /></label>
 </p>
@@ -215,7 +215,7 @@
   >Sueldo del conyugue:
   <input
     type="text"
-    name="Sueldoconyugue"
+    name="Sueldo conyugue"
     placeholder="sueldo del trabajo"
 /></label>
 </p>
@@ -228,7 +228,7 @@
     >Monto a solicitar:
     <input
       type="text"
-      name="monto"
+      name="Monto"
       placeholder="Escriba un monto"
   /></label>
   </p>
@@ -237,7 +237,7 @@
     >Tiempo:
     <input
       type="text"
-      name="tiempo"
+      name="Tiempo del Prestamo"
       placeholder="Escriba en que tiempo"
   /></label>
   </p>
