--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -42,13 +42,7 @@
           <form name="contact" method="POST" data-netlify="true">
             <p>
               <label class="texto">
-                Nombre: <input type="text" name="Nombre" placeholder="Nombre"
-              /></label>
-            </p>
-            <p>
-              <label class="texto"
-                >Apellido:
-                <input type="text" name="Apellido" placeholder="Apellido"
+                Nombre y Apellido:<input type="text" name="Nombre y Apellido" placeholder="Nombre"
               /></label>
             </p>
             <p>
@@ -118,7 +112,7 @@
             </p>
             <p>
               <label class="texto"
-                >Nombre o Numero de calle y casa:
+                >Nombre o Numero de calle y Casa:
                 <input
                   type="text"
                   name="Calle"
@@ -176,22 +170,14 @@
 <p>  <h1 class="solicitud">Datos Del/la Conyugue</h1>  </p>
 <p>
   <label class="texto"
-  >Nombre conyugue:
+  >Nombre y Apellido conyugue:
   <input
     type="text"
-    name="Nombre conyugue"
+    name="Nombre y Apellido conyugue"
     placeholder="Nombre"
 /></label>
 </p>
-<p>
-  <label class="texto"
-  >Apellido conyugue:
-  <input
-    type="text"
-    name="Apellido conyugue"
-    placeholder="Apellido"
-/></label>
-</p>
+
 <p>
   <label class="texto"
   >Numero WhatsApp:
