--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -42,7 +42,7 @@
           <form name="contact" method="POST" data-netlify="true">
             <p>
               <label class="texto">
-                Nombre y Apellido:<input type="text" name="Nombre y Apellido" placeholder="Nombre"
+                Nombre y Apellido:<input type="text" name="Nombre" placeholder="Nombre y Apellido"
               /></label>
             </p>
             <p>
@@ -173,8 +173,8 @@
   >Nombre y Apellido conyugue:
   <input
     type="text"
-    name="Nombre y Apellido conyugue"
-    placeholder="Nombre"
+    name="Nombre y conyugue"
+    placeholder="Nombre y Apellido conyugue"
 /></label>
 </p>
 
