--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -173,7 +173,7 @@
   >Nombre y Apellido conyugue:
   <input
     type="text"
-    name="Nombre y conyugue"
+    name="Nombre conyugue"
     placeholder="Nombre y Apellido conyugue"
 /></label>
 </p>
@@ -192,8 +192,8 @@
   >Lugar de trabajo conyugue:
   <input
     type="text"
-    name="Lugar conyugue"
-    placeholder="lugar de trabajo"
+    name="Lugar de trabajo conyugue"
+    placeholder="lugar de trabajo conyugue"
 /></label>
 </p>
 <p>
@@ -214,7 +214,7 @@
     >Monto a solicitar:
     <input
       type="text"
-      name="Monto"
+      name="Monto a solicitar"
       placeholder="Escriba un monto"
   /></label>
   </p>
