--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -14,6 +14,11 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+  <style>
+     .logo img {
+            width: 100px; /* Ajusta el ancho según tus necesidades */
+        }
+  </style>
 
   <body>
     </select>
