--- a/solicitud prueva.html
+++ b/solicitud prueva.html
@@ -7,21 +7,17 @@
 
     <title>B&H</title>
     <link rel="icon" href="b&H.ico" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
   <style>
      .logo img {
-            width: 100px; /* Ajusta el ancho según tus necesidades */
+            width: 140px; /* Ajusta el ancho según tus necesidades */
         }
   </style>
 
   <body>
-    </select>
     <header>
       <div class="logo">
         <img src="logob&H.ico" alt="logo de la compañia" />
