--- a/solicitud_english.html
+++ b/solicitud_english.html
@@ -22,7 +22,7 @@
           <img src="logob&H.ico" alt="company logo">
       </div>
       <ul>
-          <li><a href="Principal.html" class="">Home</a></li>
+          <li><a href="index_english.html" class="">Home</a></li>
           <li><a href="nosotros.html" >About Us</a></li>
           <li><a href="tipos_prestamos.html" >Loan Types</a></li>
           <li><a href="#review" >Social Media</a></li>
