--- a/nosotros.html
+++ b/nosotros.html
@@ -26,11 +26,11 @@
                </div>
           
             <ul>
-                <li><a href="Principal.html" class=>Inicio</a></li>
+                <li><a href="index.html" class=>Inicio</a></li>
                 <li><a href="nosotros.html" class="active">Nosotros</a></li>
                 <li><a href="tipos_prestamos.html" >Tipos de préstamos</a></li>
                 <li><a href="#review" >Redes sociales</a></li>
-                <li><a href="solicitud_prueba.html" >Solicitar</a></li>
+                <li><a href="solicitud_español.html" >Solicitar</a></li>
             </ul>
         </nav>
     </header>
