--- a/solicitud_español.html
+++ b/solicitud_español.html
@@ -26,7 +26,7 @@
           <img src="logob&H.ico" alt="logo de la compañia">
          </div>
       <ul>
-          <li><a href="Principal.html" class="">Inicio</a></li>
+          <li><a href="index.html" class="">Inicio</a></li>
           <li><a href="nosotros.html" >Nosotros</a></li>
           <li><a href="tipos_prestamos.html" >Tipos de préstamos</a></li>
           <li><a href="#review" >Redes sociales</a></li>
