--- a/tipos_prestamos.html
+++ b/tipos_prestamos.html
@@ -26,11 +26,11 @@
                </div>
           
             <ul>
-                <li><a href="Principal.html" >Inicio</a></li>
+                <li><a href="index.html" >Inicio</a></li>
                 <li><a href="nosotros.html" >Nosotros</a></li>
                 <li><a href="tipos_prestamos.html" class="active" >Tipos de préstamos</a></li>
                 <li><a href="#review" >Redes sociales</a></li>
-                <li><a href="solicitud_english.html" >Solicitar</a></li>
+                <li><a href="solicitud_español.html" >Solicitar</a></li>
             </ul>
         </nav>
     </header>
