--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
                 <li><a href="tipos_prestamos.html" >Tipos de préstamos</a></li>
                 <li><a href="#review" >Redes sociales</a></li>
                 <li><a href="solicitud_español.html" >Solicitar</a></li>
+                <li>
+                    <select id="language-select">
+                        <option value="es">Español</option>
+                        <option value="en">English</option>
+                    </select>
+                </li>
             </ul>
         </nav>
     </header>
