--- a/solicitud_english.html
+++ b/solicitud_english.html
@@ -29,8 +29,8 @@
           <li><a href="solicitud_english.html" class="active">Apply</a></li>
           <li>
             <select id="language-select">
-                <option value="en">English</option>
-                <option value="es">Spanish</option>
+                <option value="en1">English</option>
+                <option value="es1">Spanish</option>
             
             </select>
         </li>
