--- a/solicitud_español.html
+++ b/solicitud_español.html
@@ -34,8 +34,8 @@
          
           <li>
             <select id="language-select">
-                <option value="es">Español</option>
-                <option value="en">English</option>
+                <option value="es1">Español</option>
+                <option value="en1">English</option>
             </select>
         </li>
       </ul>
