--- a/index_english.html
+++ b/index_english.html
@@ -26,10 +26,17 @@
           
             <ul>
                 <li><a href="#home" class="active">Home</a></li>
-                <li><a href="nosotros.html" >About Us</a></li>
-                <li><a href="tipos_prestamos.html" >Loan Types</a></li>
+                <li><a href="nosotros_english.html" >About Us</a></li>
+                <li><a href="tipos_prestamos_english.html" >Loan Types</a></li>
                 <li><a href="#review" >Social Media</a></li>
                 <li><a href="solicitud_english.html" >Apply</a></li>
+                <li>
+                    <select id="language-select">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        
+                    </select>
+                </li>
             </ul>
         </nav>
     </header>
